--- a/index.html
+++ b/index.html
@@ -505,7 +505,7 @@
                                 required></textarea>
                         </div>
                     </div>
-                    <button href="#" class="btn btn-border" type="submit">Hire Me <span
+                    <button href="#" class="btn btn-border" type="submit">Send &nbsp<span
                             class="glyphicon glyphicon-send"></span></button>
                 </form>
             </div>
