--- a/index.html
+++ b/index.html
@@ -87,9 +87,9 @@
             <div class="row">
 
                 <div class="col-md-6">
-                    <h1>Stijn van der Pouw</h1>
+                    <h1 class="intro-name">Stijn van der Pouw</h1>
                     <div class="page-scroll">
-                        <p class="job-title">MAKE JS SCRIPT TO </p>
+                        <p class="intro-title">MAKE JS SCRIPT</p>
                         <a href="#contact" class="btn btn-fill ">Coffee?</a>
                         <div class="clearfix visible-xxs"></div>
                         <a href="#portfolio" class="btn btn-border">Projects</a>
@@ -151,11 +151,11 @@
                             </ul>
                         </div>
                         <!-- Tab panes -->
-                        <div class="tab-content">
+                        <div class="tab-content skills-row">
                             <div role="tabpanel" class="tab-pane active" id="front-end">
-
                                 <div class="row">
                                     <div class="col-md-4">
+
                                         <div class="skill">
                                             <h4>Html</h4>
                                             <div class="progress">
@@ -163,48 +163,48 @@
                                                 </div>
                                             </div>
                                         </div>
+
                                         <div class="skill">
                                             <h4>css</h4>
                                             <div class="progress">
                                                 <div class="progress-bar" role="progressbar" data-transitiongoal="75">
                                                 </div>
-
                                             </div>
                                         </div>
                                     </div>
                                     <div class="col-md-4">
+
                                         <div class="skill">
                                             <h4>bootstrap</h4>
                                             <div class="progress">
                                                 <div class="progress-bar" role="progressbar" data-transitiongoal="82">
                                                 </div>
-
                                             </div>
                                         </div>
+
                                         <div class="skill">
                                             <h4>Vue</h4>
                                             <div class="progress">
                                                 <div class="progress-bar" role="progressbar" data-transitiongoal="66">
                                                 </div>
-
                                             </div>
                                         </div>
                                     </div>
                                     <div class="col-md-4">
+
                                         <div class="skill">
                                             <h4>react</h4>
                                             <div class="progress">
                                                 <div class="progress-bar" role="progressbar" data-transitiongoal="97">
                                                 </div>
-
                                             </div>
                                         </div>
+
                                         <div class="skill">
                                             <h4>bladibla</h4>
                                             <div class="progress">
                                                 <div class="progress-bar" role="progressbar" data-transitiongoal="45">
                                                 </div>
-
                                             </div>
                                         </div>
                                     </div>
@@ -212,9 +212,9 @@
 
                             </div>
                             <div role="tabpanel" class="tab-pane" id="back-end">
-
                                 <div class="row">
                                     <div class="col-md-4">
+
                                         <div class="skill">
                                             <h4>Python</h4>
                                             <div class="progress">
@@ -222,48 +222,48 @@
                                                 </div>
                                             </div>
                                         </div>
+
                                         <div class="skill">
                                             <h4>JavaSrcipt</h4>
                                             <div class="progress">
                                                 <div class="progress-bar" role="progressbar" data-transitiongoal="75">
                                                 </div>
-
                                             </div>
                                         </div>
                                     </div>
                                     <div class="col-md-4">
+
                                         <div class="skill">
                                             <h4>C</h4>
                                             <div class="progress">
                                                 <div class="progress-bar" role="progressbar" data-transitiongoal="82">
                                                 </div>
-
                                             </div>
                                         </div>
+
                                         <div class="skill">
                                             <h4>C++</h4>
                                             <div class="progress">
                                                 <div class="progress-bar" role="progressbar" data-transitiongoal="66">
                                                 </div>
-
                                             </div>
                                         </div>
                                     </div>
                                     <div class="col-md-4">
+
                                         <div class="skill">
                                             <h4>Php</h4>
                                             <div class="progress">
                                                 <div class="progress-bar" role="progressbar" data-transitiongoal="97">
                                                 </div>
-
                                             </div>
                                         </div>
+
                                         <div class="skill">
                                             <h4>bladibla</h4>
                                             <div class="progress">
                                                 <div class="progress-bar" role="progressbar" data-transitiongoal="45">
                                                 </div>
-
                                             </div>
                                         </div>
                                     </div>
@@ -272,6 +272,7 @@
                             <div role="tabpanel" class="tab-pane" id="analyst">
                                 <div class="row">
                                     <div class="col-md-4">
+
                                         <div class="skill">
                                             <h4>Financial</h4>
                                             <div class="progress">
@@ -279,48 +280,48 @@
                                                 </div>
                                             </div>
                                         </div>
+
                                         <div class="skill">
                                             <h4>Management</h4>
                                             <div class="progress">
                                                 <div class="progress-bar" role="progressbar" data-transitiongoal="75">
                                                 </div>
-
                                             </div>
                                         </div>
                                     </div>
                                     <div class="col-md-4">
+
                                         <div class="skill">
                                             <h4>Workflow</h4>
                                             <div class="progress">
                                                 <div class="progress-bar" role="progressbar" data-transitiongoal="82">
                                                 </div>
-
                                             </div>
                                         </div>
+
                                         <div class="skill">
                                             <h4>Production</h4>
                                             <div class="progress">
                                                 <div class="progress-bar" role="progressbar" data-transitiongoal="66">
                                                 </div>
-
                                             </div>
                                         </div>
                                     </div>
                                     <div class="col-md-4">
+
                                         <div class="skill">
                                             <h4>balbal</h4>
                                             <div class="progress">
                                                 <div class="progress-bar" role="progressbar" data-transitiongoal="97">
                                                 </div>
-
                                             </div>
                                         </div>
+
                                         <div class="skill">
                                             <h4>more blabdalga</h4>
                                             <div class="progress">
                                                 <div class="progress-bar" role="progressbar" data-transitiongoal="45">
                                                 </div>
-
                                             </div>
                                         </div>
                                     </div>
@@ -329,6 +330,7 @@
                             <div role="tabpanel" class="tab-pane" id="consultantcy">
                                 <div class="row">
                                     <div class="col-md-4">
+
                                         <div class="skill">
                                             <h4>Html/css</h4>
                                             <div class="progress">
@@ -336,48 +338,48 @@
                                                 </div>
                                             </div>
                                         </div>
+
                                         <div class="skill">
                                             <h4>Python</h4>
                                             <div class="progress">
                                                 <div class="progress-bar" role="progressbar" data-transitiongoal="75">
                                                 </div>
-
                                             </div>
                                         </div>
                                     </div>
                                     <div class="col-md-4">
+
                                         <div class="skill">
                                             <h4>Javascript</h4>
                                             <div class="progress">
                                                 <div class="progress-bar" role="progressbar" data-transitiongoal="82">
                                                 </div>
-
                                             </div>
                                         </div>
+
                                         <div class="skill">
                                             <h4>Ruby</h4>
                                             <div class="progress">
                                                 <div class="progress-bar" role="progressbar" data-transitiongoal="66">
                                                 </div>
-
                                             </div>
                                         </div>
                                     </div>
                                     <div class="col-md-4">
+
                                         <div class="skill">
                                             <h4>Php</h4>
                                             <div class="progress">
                                                 <div class="progress-bar" role="progressbar" data-transitiongoal="97">
                                                 </div>
-
                                             </div>
                                         </div>
+
                                         <div class="skill">
                                             <h4>Java</h4>
                                             <div class="progress">
                                                 <div class="progress-bar" role="progressbar" data-transitiongoal="45">
                                                 </div>
-
                                             </div>
                                         </div>
                                     </div>
