--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                         <p>Hi there! Currently, I am following an ICT Bachelor program in Utrecht. Herefore I studied
                             Technical Business and management Innovations, which gave me the foundation of my still
                             growing business knowledge. </p>
-                        <a href="https://docs.google.com/document/d/1EYZXvMXhp4F5rjwu_Z-6vPQsD5fb9qlhFLTizsA-BrQ/edit?usp=sharing"
+                        <a href="https://docs.google.com/document/d/e/2PACX-1vTsxG1ugn-HW618i-f59XBh8VJIJlHop-R9Hyd0b2IVOCWRGMfHo1v8WsNoiOLmPZU-tFimDNPbIsOa/pub"
                             class="btn btn-fill" target="_blank" download>curriculum vitae</a>
                     </div>
                 </div>
