--- a/index.html
+++ b/index.html
@@ -282,9 +282,9 @@
                 <div class="row">
                     <div class="col-md-4 col-xs-6">
                         <div class="portfolio-item">
-                            <img src="assets/img/portfolio-4.jpg" class="img-res" alt="">
+                            <img src="assets/img/portfolio-4.png" class="img-res" alt="">
                             <div class="portfolio-item-info">
-                                <h4>Project Title</h4>
+                                <h4>HBO-i</h4>
                                 <a href="#" data-toggle="modal" data-target="#portfolioItem4"><span
                                         class="glyphicon glyphicon-eye-open"></span></a>
                                 <a href="#"><span class="glyphicon glyphicon-link"></span></a>
@@ -295,7 +295,7 @@
                         <div class="portfolio-item">
                             <img src="assets/img/portfolio-5.jpg" class="img-res" alt="">
                             <div class="portfolio-item-info">
-                                <h4>Project Title</h4>
+                                <h4>Mobile Tank</h4>
                                 <a href="#" data-toggle="modal" data-target="#portfolioItem5"><span
                                         class="glyphicon glyphicon-eye-open"></span></a>
                                 <a href="#"><span class="glyphicon glyphicon-link"></span></a>
@@ -304,9 +304,9 @@
                     </div>
                     <div class="col-md-4 col-xs-6">
                         <div class="portfolio-item">
-                            <img src="assets/img/portfolio-6.jpg" class="img-res" alt="">
+                            <img src="assets/img/portfolio-6.png" class="img-res" alt="">
                             <div class="portfolio-item-info">
-                                <h4>Project Title</h4>
+                                <h4>This website</h4>
                                 <a href="#" data-toggle="modal" data-target="#portfolioItem6"><span
                                         class="glyphicon glyphicon-eye-open"></span></a>
                                 <a href="#"><span class="glyphicon glyphicon-link"></span></a>
@@ -390,93 +390,19 @@
     </footer><!-- /#footer -->
 
     <!-- Modals -->
-    <div id="portfolioItem1" class="modal fade" role="dialog">
-        <div class="modal-dialog">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <a class="close" data-dismiss="modal"><span class="glyphicon glyphicon-remove"></span></a>
-                    <img class="img-res" src="assets/img/portfolio-1.jpg" alt="">
-                </div>
-                <div class="modal-body">
-                    <h4 class="modal-title">Project title</h4>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec commodo finibus tristique.
-                        Maecenas dignissim condimentum sem eu tincidunt. Curabitur in dui quis magna vestibulum pulvinar
-                        a ut urna. Nam pellentesque mattis urna. Aenean eget lectus sit amet turpis facilisis
-                        consectetur quis vel ante. Integer in massa ut nibh ultricies sagittis imperdiet in ante. Nam
-                        sed turpis vel ante placerat feugiat ac tempus magna. Nam aliquet ullamcorper dolor non
-                        hendrerit.</p>
-                </div>
-                <div class="modal-footer">
-                    <a href="#" class="btn btn-fill">Visit Page</a>
-                </div>
-            </div><!-- /.modal-content -->
-        </div><!-- /.modal-dialog -->
-    </div><!-- /.modal -->
-
-    <div id="portfolioItem2" class="modal fade" role="dialog">
-        <div class="modal-dialog">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <a class="close" data-dismiss="modal"><span class="glyphicon glyphicon-remove"></span></a>
-                    <img class="img-res" src="assets/img/portfolio-2.jpg" alt="">
-                </div>
-                <div class="modal-body">
-                    <h4 class="modal-title">Project title</h4>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec commodo finibus tristique.
-                        Maecenas dignissim condimentum sem eu tincidunt. Curabitur in dui quis magna vestibulum pulvinar
-                        a ut urna. Nam pellentesque mattis urna. Aenean eget lectus sit amet turpis facilisis
-                        consectetur quis vel ante. Integer in massa ut nibh ultricies sagittis imperdiet in ante. Nam
-                        sed turpis vel ante placerat feugiat ac tempus magna. Nam aliquet ullamcorper dolor non
-                        hendrerit.</p>
-                </div>
-                <div class="modal-footer">
-                    <a href="#" class="btn btn-fill">Visit Page</a>
-                </div>
-            </div><!-- /.modal-content -->
-        </div><!-- /.modal-dialog -->
-    </div><!-- /.modal -->
-
-    <div id="portfolioItem3" class="modal fade" role="dialog">
-        <div class="modal-dialog">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <a class="close" data-dismiss="modal"><span class="glyphicon glyphicon-remove"></span></a>
-                    <img class="img-res" src="assets/img/portfolio-3.jpg" alt="">
-                </div>
-                <div class="modal-body">
-                    <h4 class="modal-title">Project title</h4>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec commodo finibus tristique.
-                        Maecenas dignissim condimentum sem eu tincidunt. Curabitur in dui quis magna vestibulum pulvinar
-                        a ut urna. Nam pellentesque mattis urna. Aenean eget lectus sit amet turpis facilisis
-                        consectetur quis vel ante. Integer in massa ut nibh ultricies sagittis imperdiet in ante. Nam
-                        sed turpis vel ante placerat feugiat ac tempus magna. Nam aliquet ullamcorper dolor non
-                        hendrerit.</p>
-                </div>
-                <div class="modal-footer">
-                    <a href="#" class="btn btn-fill">Visit Page</a>
-                </div>
-            </div><!-- /.modal-content -->
-        </div><!-- /.modal-dialog -->
-    </div><!-- /.modal -->
-
     <div id="portfolioItem4" class="modal fade" role="dialog">
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
                     <a class="close" data-dismiss="modal"><span class="glyphicon glyphicon-remove"></span></a>
-                    <img class="img-res" src="assets/img/portfolio-4.jpg" alt="">
+                    <img class="img-res" src="assets/img/portfolio-4.png" alt="">
                 </div>
                 <div class="modal-body">
-                    <h4 class="modal-title">Project title</h4>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec commodo finibus tristique.
-                        Maecenas dignissim condimentum sem eu tincidunt. Curabitur in dui quis magna vestibulum pulvinar
-                        a ut urna. Nam pellentesque mattis urna. Aenean eget lectus sit amet turpis facilisis
-                        consectetur quis vel ante. Integer in massa ut nibh ultricies sagittis imperdiet in ante. Nam
-                        sed turpis vel ante placerat feugiat ac tempus magna. Nam aliquet ullamcorper dolor non
-                        hendrerit.</p>
+                    <h4 class="modal-title">HBO-i Domain Description</h4>
+                    <p>The umbrella organization that is responsible for domain descriptions of all ICT courses in the Netherlands, allowed us to come up with a solution for the current presentation of the system. We had to come up with an idea that would make it more accessible to look around for information again. One that didn't take a lot of clicks or time. Because it contains complicated and many related pieces, we came up with the following solution:</p>
                 </div>
                 <div class="modal-footer">
-                    <a href="#" class="btn btn-fill">Visit Page</a>
+                    <a href="http://hboi.hopto.org/" target="_blank"class="btn btn-fill">Visit Page</a>
                 </div>
             </div><!-- /.modal-content -->
         </div><!-- /.modal-dialog -->
@@ -490,7 +416,7 @@
                     <img class="img-res" src="assets/img/portfolio-5.jpg" alt="">
                 </div>
                 <div class="modal-body">
-                    <h4 class="modal-title">Project title</h4>
+                    <h4 class="modal-title">A mobile controlled tank</h4>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec commodo finibus tristique.
                         Maecenas dignissim condimentum sem eu tincidunt. Curabitur in dui quis magna vestibulum pulvinar
                         a ut urna. Nam pellentesque mattis urna. Aenean eget lectus sit amet turpis facilisis
@@ -499,7 +425,7 @@
                         hendrerit.</p>
                 </div>
                 <div class="modal-footer">
-                    <a href="#" class="btn btn-fill">Visit Page</a>
+                    <a href="https://github.com/Kubuskiller/socketController" target="_blank" class="btn btn-fill">Visit Page</a>
                 </div>
             </div><!-- /.modal-content -->
         </div><!-- /.modal-dialog -->
@@ -510,7 +436,7 @@
             <div class="modal-content">
                 <div class="modal-header">
                     <a class="close" data-dismiss="modal"><span class="glyphicon glyphicon-remove"></span></a>
-                    <img class="img-res" src="assets/img/portfolio-6.jpg" alt="">
+                    <img class="img-res" src="assets/img/portfolio-6.png" alt="">
                 </div>
                 <div class="modal-body">
                     <h4 class="modal-title">Project title</h4>
