--- a/index.html
+++ b/index.html
@@ -34,6 +34,14 @@
     <!-- Custom styles for this template -->
     <link href="assets/css/style.css" rel="stylesheet">
     <link href="assets/css/responsive.css" rel="stylesheet">
+
+    <!-- Mail service -->
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js"></script>
+<script type="text/javascript">
+(function() {
+emailjs.init("user_wWV3poxtsA8rusB3hVe0X");
+})();
+</script>
 </head>
 
 <body>
@@ -360,9 +368,9 @@
                                 required></textarea>
                         </div>
                     </div>
-                    <button id="form-button" class="btn btn-border">Send &nbsp<span
-                            class="glyphicon glyphicon-send"></span></button>
                 </form>
+                <button onclick="sendMail()" class="btn btn-border">Send &nbsp
+                    <span class="glyphicon glyphicon-send"></span></button>
             </div>
         </section><!-- /.section-form -->
 
