still not showing succes||err on mail

--- a/index.html
+++ b/index.html
@@ -368,9 +368,9 @@ emailjs.init("user_wWV3poxtsA8rusB3hVe0X");
                                 required></textarea>
                         </div>
                     </div>
+                    <button id="send-mail" onclick="sendMail()" class="btn btn-border">Send &nbsp
+                        <span class="glyphicon glyphicon-send"></span></button>
                 </form>
-                <button onclick="sendMail()" class="btn btn-border">Send &nbsp
-                    <span class="glyphicon glyphicon-send"></span></button>
             </div>
         </section><!-- /.section-form -->
 
