--- a/index.html
+++ b/index.html
@@ -37,12 +37,11 @@
 
     <!-- Mail service -->
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js"></script>
-    <script type="text/javascript">
-        (function () {
-            emailjs.init("user_wWV3poxtsA8rusB3hVe0X");
-        })();
-    </script>
-
+<script type="text/javascript">
+(function() {
+emailjs.init("user_wWV3poxtsA8rusB3hVe0X");
+})();
+</script>
 </head>
 
 <body>
@@ -92,9 +91,7 @@
                 <div class="col-md-6">
                     <h1 class="intro-name">Stijn van der Pouw</h1>
                     <div class="page-scroll">
-                        <p class="intro-title"> &nbsp <span class="txt-type" data-wait="2600"
-                                data-words='["The WebDeveloper", "The UX-Designer", "Still a student", "Someone who is eager to learn more...", "The Photographer"]'></span>
-                        </p>
+                        <p class="intro-title"> &nbsp <span class="txt-type" data-wait="2600" data-words='["The WebDeveloper", "The UX-Designer", "Still a student", "Someone who is eager to learn more...", "The Photographer"]'></span></p>
                         <a href="#contact" class="btn btn-fill ">Coffee?</a>
                         <div class="clearfix visible-xxs"></div>
                         <a href="#portfolio" class="btn btn-border">Projects</a>
@@ -358,22 +355,22 @@
 
                 <h3>Contact</h3>
                 <img src="assets/img/lines.svg" class="img-lines" alt="lines">
-                <form>
+                <form id="mail_form">
                     <div class="row">
                         <div class="col-sm-6">
-                            <input type="text" name="name" class="form-control mt-x-0" placeholder="Name" required>
+                            <input type="text" id="name" class="form-control mt-x-0" placeholder="Name" required>
                         </div>
                         <div class="col-sm-6">
-                            <input type="email" name="email" class="form-control" placeholder="Email" required>
+                            <input type="email" id="mail" class="form-control" placeholder="Email" required>
                         </div>
                         <div class="col-sm-12">
-                            <textarea name="message" id="mesaage" class="form-control" placeholder="Message"
+                            <textarea id="message" class="form-control" placeholder="Message"
                                 required></textarea>
                         </div>
                     </div>
-                    <button id="send_mail_button" class="btn btn-border">Send &nbsp<span
-                            class="glyphicon glyphicon-send"></span></button>
                 </form>
+                <button onclick="sendMail()" class="btn btn-border">Send &nbsp
+                    <span class="glyphicon glyphicon-send"></span></button>
             </div>
         </section><!-- /.section-form -->
 
@@ -400,6 +397,9 @@
         </div>
     </footer><!-- /#footer -->
 
+
+
+
     <!-- Modals -->
     <div id="portfolioItem4" class="modal fade" role="dialog">
         <div class="modal-dialog">
@@ -410,14 +410,10 @@
                 </div>
                 <div class="modal-body">
                     <h4 class="modal-title">HBO-i Domain Description</h4>
-                    <p>The umbrella organization that is responsible for domain descriptions of all ICT courses in the
-                        Netherlands, allowed us to come up with a solution for the current presentation of the system.
-                        We had to come up with an idea that would make it more accessible to look around for information
-                        again. One that didn't take a lot of clicks or time. Because it contains complicated and many
-                        related pieces, we came up with the following solution:</p>
+                    <p>The umbrella organization that is responsible for domain descriptions of all ICT courses in the Netherlands, allowed us to come up with a solution for the current presentation of the system. We had to come up with an idea that would make it more accessible to look around for information again. One that didn't take a lot of clicks or time. Because it contains complicated and many related pieces, we came up with the following solution:</p>
                 </div>
                 <div class="modal-footer">
-                    <a href="http://hboi.hopto.org/" target="_blank" class="btn btn-fill">Visit Page</a>
+                    <a href="http://hboi.hopto.org/" target="_blank"class="btn btn-fill">Visit Page</a>
                 </div>
             </div><!-- /.modal-content -->
         </div><!-- /.modal-dialog -->
@@ -440,8 +436,7 @@
                         hendrerit.</p>
                 </div>
                 <div class="modal-footer">
-                    <a href="https://github.com/Kubuskiller/socketController" target="_blank" class="btn btn-fill">Visit
-                        Page</a>
+                    <a href="https://github.com/Kubuskiller/socketController" target="_blank" class="btn btn-fill">Visit Page</a>
                 </div>
             </div><!-- /.modal-content -->
         </div><!-- /.modal-dialog -->
