tab names skilss

--- a/index.html
+++ b/index.html
@@ -143,11 +143,11 @@ emailjs.init("user_wWV3poxtsA8rusB3hVe0X");
                         <div class="skill-tabs">
                             <ul class="nav nav-pills nav-justified" role="tablist">
                                 <li role="presentation" class="btn"><a href="#front-end" aria-controls="home" role="tab"
-                                        data-toggle="tab">Front-end</a></li>
+                                        data-toggle="tab">Creative</a></li>
                                 <li role="presentation" class="btn"><a href="#back-end" aria-controls="profile"
-                                        role="tab" data-toggle="tab">Back-end</a></li>
+                                        role="tab" data-toggle="tab">Development</a></li>
                                 <li role="presentation" class="btn"><a href="#consultantcy" aria-controls="settings"
-                                        role="tab" data-toggle="tab">consultantcy</a></li>
+                                        role="tab" data-toggle="tab">Consultant</a></li>
                             </ul>
                         </div>
                         <!-- Tab panes -->
