--- a/index.html
+++ b/index.html
@@ -159,67 +159,32 @@
                     <img src="assets/img/lines.svg" class="img-lines" alt="lines">
                 </div>
 
-                <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+                <div id="carousel-portofolio" class="carousel slide" data-ride="carousel">
+                    
                     <!-- Indicators -->
-                    <ol class="carousel-indicators">
-                        <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
-                        <li data-target="#carousel-example-generic" data-slide-to="1"></li>
-                        <li data-target="#carousel-example-generic" data-slide-to="2"></li>
-                    </ol>
+                    <ol class="carousel-indicators"> </ol>
 
                     <!-- Wrapper for slides -->
                     <div class="carousel-inner" role="listbox">
                         <div class="item active">
-                            <img src="..." alt="...">
-                            <div class="carousel-caption">
-                                ...
-                            </div>
-                        </div>
-                        <div class="item">
-                            <img src="..." alt="...">
-                            <div class="carousel-caption">
-                                <h3>title</h3>
-                                <p>text</p>
-                                ...
-                            </div>
-                        </div>
-                        <div class="item">
                             <img src="assets\img\Portfolio-4.png" alt="...">
                             <div class="carousel-caption">
                                 <h3>title1</h3>
                                 <p>text</p>
-                                ...
                             </div>
                         </div>
-                        <div class="item">
-                            <img src="assets\img\Portfolio-4.png" alt="...">
-                            <div class="carousel-caption">
-                                <h3>title2</h3>
-                                <p>text</p>
-                                ...
-                            </div>
-                        </div>
-                        ...
                     </div>
 
                     <!-- Controls -->
-                    <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
+                    <a class="left carousel-control" href="#carousel-portofolio" role="button" data-slide="prev">
                         <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
                         <span class="sr-only">Previous</span>
                     </a>
-                    <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
+                    <a class="right carousel-control" href="#carousel-portofolio" role="button" data-slide="next">
                         <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
                         <span class="sr-only">Next</span>
                     </a>
                 </div>
-
-
-
-                <!------------------------------------------------------- make gallery------------------------------------------------------ -->
-
-
-                <!-- <button class="btn"> < </button>
-                <button class="btn"> > </button> -->
             </div>
         </section><!-- /.secton-portfolio -->
 
@@ -267,32 +232,9 @@
 
     </main><!-- /#main -->
 
-    <footer id="colophon" class="site-footer">
-        <div class="container">
-            <div class="row">
-                <div class="col-sm-4 col-xs-12">
-                    <a class="icon facebook-bg" href="#"><i class="icon-facebook"></i></a>
-                    <a class="icon twitter-bg" href="#"><i class="icon-twitter"></i></a>
-                    <a class="icon gplus-bg" href="#"><i class="icon-linkedin"></i></a>
-                    <a class="icon linkedin-bg" href="#"><i class="icon-gplus"></i></a>
-                </div>
-                <div class="col-sm-4 col-sm-offset-0 col-xs-6 col-xs-offset-3">
-                    <p class="copyright">2017. All Rights Reserved</p>
-                </div>
-                <div class="col-sm-4 col-xs-3">
-                    <div class="text-right page-scroll">
-                        <a class="icon icon-up-bg" href="#hero"><i class="icon-up"></i></a>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </footer><!-- /#footer -->
-
-
     <!-- Bootstrap core JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
-    
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <script src="assets/js/bootstrap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js"></script>
