--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
         </section><!-- /.section-counters -->
 
         <section id="contact" class="site-section section-form text-center">
-            <div class="container">
+            <div class="container form-section">
 
                 <h3>Contact</h3>
                 <img src="assets/img/lines.svg" class="img-lines" alt="lines">
