--- a/index.html
+++ b/index.html
@@ -10,9 +10,6 @@
 
     <title>Peacock</title>
 
-    <!-- Fonts -->
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700" rel="stylesheet">
-
     <!-- Favicon
     ================================================== -->
     <link rel="icon" type="image/png" sizes="16x16" href="assets/img/favicon.png">
@@ -43,7 +40,7 @@
         <nav id="primary-navigation" class="site-navigation">
             <div class="container">
 
-                <!-- Mobile menu -->
+                <!-- Menu -->
                 <div class="navbar-header page-scroll">
                     <button type="button" class="navbar-toggle collapsed" data-target="#portfolio-perfect-collapse"
                         aria-expanded="false">
@@ -216,8 +213,7 @@
                         </div>
                     </div>
                 </form>
-                <button id="mailButton" onclick="sendMail()" class="btn btn-border">Send &nbsp
-                    <span class="glyphicon glyphicon-send"></span></button>
+                <button id="mailButton" onclick="sendMail()" class="btn btn-border">Send</button>
             </div>
         </section><!-- /.section-form -->
 
