carousel still needs fix img ratio

--- a/index.html
+++ b/index.html
@@ -136,11 +136,7 @@
             <div class="container">
                 <div class="text-center">
                     <h3>Projects delivered</h3>
-
-<!--  -->
-
-<!--  -->
-
+                    <img src="assets/img/lines.svg" class="img-lines" alt="lines">
 
                 <div id="carousel-portofolio" class="carousel slide" data-ride="carousel">
 
